# ERT-Coding-Exercises

./: README.md
Data-Collection/: Dockerfile  README.md  pyproject.toml
Data-Collection/data/: noaa_rswd.csv  noaa_rswd.pkl  noaa_swpc_data.pkl
Data-Collection/src/data_collection/: __init__.py  main.py
Data-Collection/src/data_collection/tests/: test_.py
Typescript_Assessment/: README.md  package-lock.json  package.json  vite.config.ts
Typescript_Assessment/src/: App.css  App.tsx
Typescript_Assessment/src/components/: Canvas.tsx
