######################
### Poetry Version ###
######################

[tool.poetry]
name = "ERT Data Collection Exercise"
description = "Data Collection Exercise for ERT Application"
version = "0.0.0"
authors = ["Glass Elsarboukh <glass.ships@outlook.com>"]
repository = "https://github.com/glass-ships/ert-coding-exercises"
packages = [{ include = "data_collection", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "*"
loguru = "*"
pystow = "^0.5.0"
pandas = "^2.1.1"

[tool.poetry.dev-dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = { version = "*", extras = ["python"] }


[tool.poetry.scripts]
data-collection = "data_collection.main:app"


[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"
